--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "immer": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
@@ -65,6 +67,7 @@
     "zustand": "latest"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
