--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.9.7",
     "immer": "latest",
@@ -52,6 +54,7 @@
     "mongoose": "^8.14.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "openai": "^4.97.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -62,6 +65,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "latest",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "latest",
     "zustand": "latest"
