added basic admin page and python backend

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,16 @@
 # MongoDB connection string
-MONGODB_URI="mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority&appName=app-name"
+MONGODB_URI=mongodb+srv://<username>:<password>@<cluster-url>/<database>?retryWrites=true&w=majority&appName=<app-name>
 
 # OpenAI API Key (required for Whisper speech-to-text)
-OPENAI_API_KEY="your-openai-api-key"
+OPENAI_API_KEY=sk-...
 
 # Base URL for the application (used for Open Graph and Twitter card images)
-# In development, this is localhost:3000
-# In production, replace with your actual domain
-NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+# In development, this is usually http://localhost:3000
+# In production, replace with your actual domain (e.g., https://yourdomain.com)
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# Application Settings
-# Next Auth secret is required for authentication (generate with `openssl rand -base64 32`)
-NEXTAUTH_SECRET="your-nextauth-secret-key"
-NEXTAUTH_URL="http://localhost:3000"
+# Python API Configuration (Flask backend endpoint)
+PYTHON_BACKEND_URL=http://localhost:5000
 
-# Optional: Vercel analytics
-# VERCEL_ANALYTICS_ID="" 
+# Admin Authentication password
+ADMIN_PASSWORD=your-admin-password
