added ui enhancement and different research topic

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,29 @@
-# MongoDB connection string
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster-url>/<database>?retryWrites=true&w=majority&appName=<app-name>
+# === Database Configuration ===
+# MongoDB connection URI (use your own credentials & cluster)
+MONGODB_URI=
 
-# OpenAI API Key (required for Whisper speech-to-text)
-OPENAI_API_KEY=sk-...
+# === OpenAI API Configuration ===
+# Required for features like Whisper or GPT access
+OPENAI_API_KEY=
 
-# Base URL for the application (used for Open Graph and Twitter card images)
-# In development, this is usually http://localhost:3000
-# In production, replace with your actual domain (e.g., https://yourdomain.com)
+# === App Configuration ===
+# Base URL of the frontend app (used in metadata and links)
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# Python API Configuration (Flask backend endpoint)
-PYTHON_BACKEND_URL=http://localhost:5000
+# === Python Backend (LLM Reasoning Engine) ===
+# Local or deployed URL for the Python backend API
+PYTHON_BACKEND_URL=http://localhost:5001
+# Alternative deployed version (optional)
+# PYTHON_BACKEND_URL=https://trace-your-thinking.onrender.com
 
-# Admin Authentication password
-ADMIN_PASSWORD=your-admin-password
+# === Admin Access Control ===
+# Password for accessing admin-only features (optional)
+ADMIN_PASSWORD=
+
+# === Optional LLM Provider (e.g., DashScope) ===
+# Alternative key if using third-party LLMs (e.g., Alibaba DashScope)
+DASHSCOPE_API_KEY=
+
+# === Default Interview Topic ===
+# Used to pre-set the chatbot or UI with a specific domain context
+NEXT_PUBLIC_RESEARCH_TOPIC=
