--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
-flask==2.2.3
-flask-cors==3.0.10
-werkzeug==2.2.3
+flask>=2.0.0
+flask-cors>=3.0.0
+werkzeug>=2.2.3
 dashscope>=1.22.2
-python-dotenv==1.0.0
-gunicorn==20.1.0
+python-dotenv>=1.0.0
+gunicorn>=20.1.0
+numpy>=1.19.0
+requests>=2.27.1 
